:memo: 重构 README 并清理测试代码
将组件文档分为 Quarkus 集成模块和独立库模块两类，
更新构建说明和完成度清单；测试代码使用更现代的 API。

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>